# real-estate-system

./: .gitignore  API_DOCS.md  LICENSE  README.md  app.py  config.py  models.py  pyproject.toml
routes/: clients.py  contracts.py  inspection.py  properties.py
templates/: base.html
templates/clients/: list.html
templates/contracts/: list.html
templates/inspection/: list.html
templates/properties/: add.html  list.html
tests/: conftest.py
tests/functional/: test_ui.py
tests/integration/: test_routes.py
tests/regression/: test_properties.py
tests/unit/: test_forms.py  test_models.py
